# ClipValult

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ppa.yml  publish.yml
app/: main.py
debian/: changelog  clipvault.desktop  control  copyright  install  postinst  prerm
installation/: install.sh
