[project]
name = "clipvault"
dynamic = ["version"]
description = "Windows-style clipboard manager for Ubuntu"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["clipboard", "ubuntu", "linux", "utility"]
license = { text = "MIT" }

# PyQt5 must be installed via apt on Ubuntu, not pip:
#   sudo apt install python3-pyqt5
dependencies = [
    "pynput>=1.7.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
clipvault = "app.main:main"

[project.urls]
Homepage = "https://github.com/jinshah0322/ClipVault"
Issues   = "https://github.com/jinshah0322/ClipVault/issues"

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.setuptools.packages.find]
where   = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths    = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
